welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:10: error: not found: value faireligne
  faireligne()
  ^